# 366_project

./: AGENTS.md  M2_Agile_Requirements.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  scan_report.md
.github/workflows/: ci.yml
deliverables/: FINAL_WRITTEN_REPORT.md  ISSUE_LOG.md  README.md  README_AND_DEPLOYMENT_GUIDE.md  RETROSPECTIVE.md
docs/: DEPLOYMENT.md  FINAL_PRESENTATION_BRIEF.txt  ISSUE_LOG.md  M4_Beta_Release_Report.md  M5_Final_Release_Report.md  QUICKSTART.md  SECURITY.md  SECURITY_REPORT.md  TECHNICAL_REPORT.md
docs/guides/: DEPLOYMENT.md  QUICKSTART.md  SECURITY.md
docs/reports/: FINAL_PRESENTATION_BRIEF.txt  ISSUE_LOG.md  M3_Design_Document_ThreatModeling.md  M4_Beta_Release_Report.md  M5_Final_Release_Report.md  SECURITY_REPORT.md  TECHNICAL_REPORT.md
issues/: 001-adversarial-prompt-injection-evaluation-suite.md  002-stronger-secret-detection.md  003-supply-chain-provenance-checks.md
milestones/: M2_Agile_Requirements.md  M3_Design_Document_ThreatModeling.md
src/secanalyzer/: __init__.py  __main__.py  bandit_scan.py  cli.py  config.py  exceptions.py  github_client.py  issues_session.py  llm.py  operations.py  output.py  repo_analyzer.py  report_tree.py  scan_llm.py
tests/: __init__.py  test_bandit_scan.py  test_cli.py  test_config.py  test_github_client.py  test_issue_analyze.py  test_issues_session.py  test_llm.py  test_llm_scan.py  test_module_main.py  test_package.py  test_repo_analyzer.py  test_repo_scan_inventory.py  test_report_tree.py  test_scan_llm.py  test_scan_llm_quota.py
